--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -24,7 +24,7 @@
                     </select>
                     <div class="row">
                       <div class="col-12 center">
-                        <button type="submit" class="submit-button">Add 🕹️</button>
+                        <button type="submit" class="submit-button" style="margin-bottom: -50px;">Add 🕹️</button>
                       </div>
                     </div>
                   </form>
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="col-12">
-              <h2 class="center">Full list of video games ever existed</h2>
+              <h2 class="center" style="margin-top: -50px;">Full list of video games ever existed</h2>
             </div>
             <div class="grid-display">
               <div class="container">
