--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -83,7 +83,7 @@
                           <p>You must be logged in to add a review.</p>
                           <% } %>
                             <h3>All Reviews:</h3>
-                            <ul>
+                            <ul class="custom-list">
                               <% game.reviews.forEach(review=> { %>
                                 <li>
                                   <div class="review-rating">
