--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -6,7 +6,7 @@
   <div class="grid-content">
     <div class="container">
       <h1>All our gamers here!</h1>
-      <ul>
+      <ul class="custom-list">
         <% users.forEach(user => { %>
           <li>
             <%= user.profile.name %>
