--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -9,10 +9,19 @@
           <h3 class="brand">FUNventory</h3>
         </a>
         <div class="nav-items">
-          <a href="/games">🕹️</a>
-          <a href="/profiles">👾</a>
+          <div class="tooltip">
+            <a href="/games">🕹️</a>
+            <span class="tooltiptext">all games</span>
+          </div>
+          <div class="tooltip">
+            <a href="/profiles">👾</a>
+            <span class="tooltiptext">all users</span>
+          </div>
           <% if (user) { %>
-            <a href="/auth/logout">🚪</a>
+            <div class="tooltip">
+              <a href="/auth/logout">🚪</a>
+              <span class="tooltiptext">log out</span>
+            </div>
             <% } else { %>
               <div id="g_id_onload" data-client_id="<%= googleClientID %>" data-login_uri="/auth/google"
                 data-auto_prompt="false"></div>
