--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -5,78 +5,76 @@
     <div class="grid-wrapper">
       <div class="grid-content">
         <div class="body-content">
-          <div class="row">
-            <div class="col-12">
-              <h1 class="center m-bottom font-heavy">We love video games here!</h1>
-              <% if (user) { %>
-                <h2 class="center m-bottom font-regular">What are you playing today? Add your game here:</h2>
-                <div class="grid-display center">
-                  <form action="/games" method="POST">
-                    <label for="title-input">Title:</label>
-                    <input type="text" name="title" id="title-input" class="styled-element">
-                    <label for="platform-input">Platform:</label>
-                    <input type="text" name="platform" id="platform-input" class="styled-element">
-                    <label for="completion-status-select">Status:</label>
-                    <select name="completion-status" id="completion-status-select" class="styled-element">
-                      <option value="Complete">Complete</option>
-                      <option value="Incomplete">Incomplete</option>
-                      <option value="In-progress">In progress</option>
-                    </select>
-                    <div class="row">
-                      <div class="col-12 center">
-                        <button type="submit" class="submit-button" style="margin-bottom: -50px;">Add 🕹️</button>
-                      </div>
+          <div class="col-12">
+            <h1 class="center m-bottom font-heavy">We love video games here!</h1>
+            <% if (user) { %>
+              <h2 class="center m-bottom font-regular">What are you playing today? Add your game here:</h2>
+              <div class="grid-display center">
+                <form action="/games" method="POST">
+                  <label for="title-input">Title:</label>
+                  <input type="text" name="title" id="title-input" class="styled-element">
+                  <label for="platform-input">Platform:</label>
+                  <input type="text" name="platform" id="platform-input" class="styled-element">
+                  <label for="completion-status-select">Status:</label>
+                  <select name="completion-status" id="completion-status-select" class="styled-element">
+                    <option value="Complete">Complete</option>
+                    <option value="Incomplete">Incomplete</option>
+                    <option value="In-progress">In progress</option>
+                  </select>
+                  <div class="row">
+                    <div class="col-12 center">
+                      <button type="submit" class="submit-button">Add 🕹️</button>
                     </div>
-                  </form>
-                  <% } %>
-                    <div class="col-4 hidden-sm"></div>
-                    <div class="col-4">
-                      <div class="line"></div>
-                    </div>
-                    <div class="col-4 hidden-sm"></div>
-                </div>
-            </div>
-            <div class="col-12">
-              <h2 class="center" style="margin-top: -50px;">Full list of video games ever existed</h2>
-            </div>
-            <div class="grid-display">
-              <div class="container">
-                <div class="row">
-                  <table class="container">
-                    <thead>
-                      <tr>
-                        <th class="center col-12 col-3-sm">Title</th>
-                        <th class="center col-12 col-2-sm">Platform</th>
-                        <th class="center col-12 col-2-sm">Release Year</th>
-                        <th class="center col-12 col-2-sm">Genre</th>
-                        <th class="center col-12 col-3-sm">Developer</th>
+                  </div>
+                </form>
+                <% } %>
+                  <div class="col-4 hidden-sm"></div>
+                  <div class="col-4">
+                    <div class="line"></div>
+                  </div>
+                  <div class="col-4 hidden-sm"></div>
+              </div>
+          </div>
+          <div class="col-12">
+            <h2 class="center">Full list of video games ever existed</h2>
+          </div>
+          <div class="grid-display">
+            <div class="container">
+              <div class="row">
+                <table class="container">
+                  <thead>
+                    <tr>
+                      <th class="center col-12 col-3-sm">Title</th>
+                      <th class="center col-12 col-2-sm">Platform</th>
+                      <th class="center col-12 col-2-sm">Release Year</th>
+                      <th class="center col-12 col-2-sm">Genre</th>
+                      <th class="center col-12 col-3-sm">Developer</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <% games.forEach(game=> { %>
+                      <tr class="table-row">
+                        <td class="center col-12 col-3-sm table-cell">
+                          <a href="/games/<%= game._id %>">
+                            <%= game.title %>
+                          </a>
+                        </td>
+                        <td class="center col-12 col-2-sm table-cell">
+                          <%= game.platform %>
+                        </td>
+                        <td class="center col-12 col-2-sm table-cell">
+                          <%= game.releaseYear %>
+                        </td>
+                        <td class="center col-12 col-2-sm table-cell">
+                          <%= game.genre %>
+                        </td>
+                        <td class="center col-12 col-3-sm table-cell">
+                          <%= game.developer %>
+                        </td>
                       </tr>
-                    </thead>
-                    <tbody>
-                      <% games.forEach(game=> { %>
-                        <tr class="table-row">
-                          <td class="center col-12 col-3-sm table-cell">
-                            <a href="/games/<%= game._id %>">
-                              <%= game.title %>
-                            </a>
-                          </td>
-                          <td class="center col-12 col-2-sm table-cell">
-                            <%= game.platform %>
-                          </td>
-                          <td class="center col-12 col-2-sm table-cell">
-                            <%= game.releaseYear %>
-                          </td>
-                          <td class="center col-12 col-2-sm table-cell">
-                            <%= game.genre %>
-                          </td>
-                          <td class="center col-12 col-3-sm table-cell">
-                            <%= game.developer %>
-                          </td>
-                        </tr>
-                        <% }) %>
-                    </tbody>
-                  </table>
-                </div>
+                      <% }) %>
+                  </tbody>
+                </table>
               </div>
             </div>
           </div>
