fix table position on main page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -356,6 +356,10 @@ p {
   margin-right: auto;
 }
 
+.table-container {
+  padding-right: 130px;
+}
+
 .row {
   position: relative;
   width: 100%;
