--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -28,18 +28,16 @@
                   </div>
                 </form>
                 <% } %>
-                  <div class="col-4 hidden-sm"></div>
-                  <div class="col-4">
+                  <div class="col-6 center">
                     <div class="line"></div>
                   </div>
-                  <div class="col-4 hidden-sm"></div>
               </div>
           </div>
           <div class="col-12">
             <h2 class="center">Full list of video games ever existed</h2>
           </div>
           <div class="grid-display">
-            <div class="container">
+            <div class="container table-container">
               <div class="row">
                 <table class="container">
                   <thead>
