grammar errors check

--- a/views/games/edit.ejs
+++ b/views/games/edit.ejs
@@ -72,7 +72,7 @@
               </form>
               <% } %>
                 <% } else { %>
-                  <p>You must be logged in to add a review.</p>
+                  <p>You need to be logged in to submit a review.</p>
                   <% } %>
                     <h3>All Reviews:</h3>
                     <ul class="custom-list">
