--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -5,7 +5,7 @@
 <div class="grid-wrapper">
   <div class="grid-content">
     <div class="container">
-      <h1>All our gamers here!</h1>
+      <h1>A warm welcome to all our gamers!</h1>
       <ul class="custom-list">
         <% users.forEach(user => { %>
           <li>
