--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -34,7 +34,7 @@
           </div>
       </div>
       <div class="col-12">
-        <h2 class="center">Full list of video games ever existed</h2>
+        <h2 class="center">Full list of all video games that have ever existed</h2>
       </div>
       <div class="grid-display">
         <div class="container table-container">
